--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,27 @@
     margin: 10px;
     cursor: pointer;
 }
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+   width: 200px;
+    height: 380px;
+    padding: 5px;
+    background-color: #f0f0f0;
+    margin: 20px
+}
+.login-btn{
+    padding: 0 20px;
+    cursor: pointer;
+}
+.filter{
+    display: flex;
+}
+.search-bar{
+    margin: 10px;
+}
+.search-btn{
+    cursor: pointer;
+}
